# blorg

./: .gitignore  Cargo.toml  README.md  Rocket.toml  flake.nix  run.sh  shell.nix
migrations/2023-03-22-152604_page/: down.sql  up.sql
migrations/2023-03-22-152604_pages/: up.sql
migrations/2023-03-26-201743_admin/: down.sql  up.sql
migrations/2023-03-26-201743_admins/: down.sql  up.sql
migrations/2023-03-26-201743_users/: up.sql
migrations/2023-04-06-212847_config/: down.sql  up.sql
migrations/2023-05-01-210118_page_revision/: down.sql  up.sql
migrations/2023-05-10-234003_commenter/: down.sql  up.sql
migrations/2023-05-10-234004_comment/: up.sql
src/: main.rs  models.rs  schema.rs  util.rs  views.rs
src/views/: admins.rs  comments.rs  mod.rs  pages.rs  search.rs  users.rs
static/: style.css
templates/: base.html.tera  create_child_page_form.html.tera  create_user_form.html.tera  edit_page_form.html.tera  login_admin_form.html.tera  login_user_form.html.tera  page.html.tera  page_form.html.tera  pages.htmls.hbs  search_results.html.tera  upload_file_form.html.tera  upload_image_form.html.tera  url_list.html.tera
