[package]
name = "blorg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features=["json", "secrets"]}
diesel = { version = "2.0.0", features = ["sqlite", "r2d2"] }
dotenvy = "0.15"
serde = "1.0.152"
pandoc = "0.8.10"
slugify = "0.1.0"
slab_tree = "0.3.2"
rust-crypto = "0.2.36"
pulldown-cmark = "0.9.2"

[dependencies.rocket_dyn_templates]
features = ["tera"]

[dependencies.rocket_contrib]
version = "0.4.4"
